--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,12 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.intuit.sdp:sdp-android:1.0.5'
+    implementation 'com.hendiware.utils:futils:1.6.91'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+
 
 }
