--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ahmed.qusat">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -18,11 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activites.Second_Activity">
-        </activity>
-
-        <activity android:name=".Activites.First_Activity"/>
-
+        <activity android:name=".Activites.Second_Activity" />
+        <activity android:name=".Activites.First_Activity" />
+        <activity
+            android:name=".Activites.Spinner_Loan"
+            android:theme="@style/Theme.AppCompat.Dialog" />
     </application>
 
 </manifest>
